--- a/cv/cv.css
+++ b/cv/cv.css
@@ -13,7 +13,7 @@
 #photo {
     height: 200px;
     width: 200px;
-    background-image: url("../bonhomme-blanc-3d-images-gratuites-libres-de-droits22-1560x1169.jpg");
+    background-image: url("bonhomme-blanc-3d-images-gratuites-libres-de-droits22-1560x1169.jpg");
     float: right;
     right: 100px;
     top: 50px;
